--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
             html{
-                --font_size_head : 5rem ;
+                --font_size_head : 40px ;
                 --font_fam_headder : 'Prompt' ;
                 --font_color_head : rgb(255, 255, 255);
                 width: 100%;
