--- a/port/pstyle.css
+++ b/port/pstyle.css
@@ -177,3 +177,53 @@
     border-bottom: solid rgb(184, 184, 184) 10px;
     
 }
+
+
+
+#form{
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.294);;
+    color: #fff;
+    padding: 20px;
+    border-top: solid rgba(255, 255, 255, 0.685) 0.5px ;
+}
+#form>form{
+    width: 60%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+#form>form>input , #form>form>textarea{
+    font-family: "Prompt";
+    background-color: rgba(255, 255, 255, 0.596);
+    border: solid rgb(121, 121, 121) 0.5px;
+    outline: none;
+    border-radius: 4px;
+    transition: all 1s;
+}
+
+#form>form>input:focus , #submit:hover , #form>form>textarea:focus {
+    transition: all 1s;
+    
+    background-color: rgba(255, 255, 255, 0.911);
+    box-shadow: rgba(0, 0, 0, 0.301) 0px 0px 5px ;
+}
+
+#submit{
+    color: rgb(107, 107, 107);
+    font-family: "Prompt";
+    width: 70px;
+    height: 30px;
+}
+#form>form>input#email {
+    width: 100%;
+    max-width: 100%;
+    height: 30px;
+
+}
+#form>form>textarea{
+    width: 100%;
+    height: 100px;
+    resize: none;
+}
