--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -5,7 +5,7 @@ body{
  margin : 10px;
 }
 
-#theme , #Input , #Key {
+#theme , #Key {
  font-family: 'IBM Plex Sans Thai', sans-serif;
   font-weight : 500 ;
 }
