--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -10,6 +10,10 @@ body{
   font-weight : 500 ;
 }
 
+#ct-height{
+ width : 180px ;
+}
+
 #Input{
   font-family: 'IBM Plex Sans Thai', sans-serif;
   font-weight : 200;
