--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -33,3 +33,12 @@ body{
  height : 10px;
  margin-bottom : 110px;
 }
+
+#Bt-del{
+ width : 100% ; 
+ height : 15px; 
+ font-size : 10px ; 
+ padding : 0px ;
+}
+
+
