--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -41,4 +41,30 @@ body{
  padding : 0px ;
 }
 
+.box-title{
+ height : 15px
+}
+
+.title{
+ font-size : 10px ; 
+ margin : 0px ; 
+ width :100% ;
+ border-top : var(--bs-gray-400)  solid 1px ;
+ border-left : var(--bs-gray-400)  solid 1px ;
+ padding-left : 10px ;
+ border-radius : 5px 0px 0px 0px ;
+}
+
+.title-bt{
+ font-size : 10px ; 
+ padding-top : 0px ;
+ border-top : var(--bs-gray-400)  solid 1px ;
+ border-right : var(--bs-gray-400)  solid 1px ;
+ border-left : var(--bs-gray-400)  solid 1px ;
+ border-radius : 0px 5px 0px 0px ;
+}
+
+.box-under-title{
+ border-radius : 0px 0px 5px 5px ;
+}
 
