--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -14,7 +14,7 @@ body{
  width : 160px ;
 }
 
-#Input{
+#Input , #Input-css{
   font-family: 'IBM Plex Sans Thai', sans-serif;
   font-weight : 200;
 }
