--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@200&display=swap');
 
+*::-webkit-scrollbar , *::-webkit-scrollbar-corner{
+    background-color: var(--bs);
+   width : 5px ;
+
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--bs-gray-400);
+}
+
 body{
  margin : 10px;
 }
