--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -2,17 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@200&display=swap');
 
 *::-webkit-scrollbar , *::-webkit-scrollbar-corner{
-    background-color: var(--bs);
-   width : 5px ;
-
+ background-color: var(--bs);
+ width : 5px ;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--bs-gray-400);
+ background-color: var(--bs-gray-400);
 }
 
 body{
- margin : 10px;
+ margin-top: 10px;
+ margin-right: 2.5%;
+ margin-left: 2.5%;
 }
 
 #theme , #Key {
