--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -79,3 +79,9 @@ body{
  border-radius : 0px 0px 5px 5px ;
 }
 
+@media screen and (min-width: 750px){
+ .flex-ct{
+  display : flex ;
+  justify : space-between ;
+ }
+}
