--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -82,6 +82,9 @@ body{
 @media screen and (min-width: 750px){
  .flex-ct{
   display : flex ;
-  justify : space-between ;
+  justify-content : space-between ;
+ }
+ .flex-ct>div {
+    width: 49%;
  }
 }
