--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -42,7 +42,7 @@ body{
  font-size : 5px;
  margin-top : 10px;
  height : 10px;
- margin-bottom : 110px;
+ margin-bottom : 20px;
 }
 
 #Bt-del{
@@ -77,6 +77,12 @@ body{
 
 .box-under-title{
  border-radius : 0px 0px 5px 5px ;
+}
+
+.rule{
+ font-family: 'IBM Plex Sans Thai', sans-serif;
+ font-weight : 200 ;
+ margin-bottom : 110px;
 }
 
 @media screen and (min-width: 750px){
