--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -81,6 +81,7 @@ body{
 
 .rule{
  font-family: 'IBM Plex Sans Thai', sans-serif;
+ font-size : 14px ;
  font-weight : 200 ;
  margin-bottom : 110px;
 }
