--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -74,6 +74,15 @@ body{
  border-radius : 0px 5px 0px 0px ;
 }
 
+#title-bt2{
+ font-size : 10px ; 
+ padding-top : 0px ;
+ border-radius : 0px ;
+ border : solid var(--bs-gray-400) 0px ;
+ border-top : solid var(--bs-gray-400) 1px ;
+ border-left : solid var(--bs-gray-400) 1px ;
+}
+
 .box-under-title{
  border-radius : 0px 0px 5px 5px ;
 }
