--- a/test_space/HTML_SP/style/style.css
+++ b/test_space/HTML_SP/style/style.css
@@ -74,7 +74,7 @@ body{
  border-radius : 0px 5px 0px 0px ;
 }
 
-#title-bt2{
+.title-bt2{
  font-size : 10px ; 
  padding-top : 0px ;
  border-radius : 0px ;
