--- a/test_space/HTML_SP/style/style_for_bulma.css
+++ b/test_space/HTML_SP/style/style_for_bulma.css
@@ -53,10 +53,10 @@ body{
 }
 
 .box-title{
- height : 15px
+ height : 15px ;
 }
 
-.title{
+.Title{
  font-size : 10px ; 
  background-color : none ;
  margin : 0px ; 
