--- a/test_space/HTML_SP/style/style_for_bulma.css
+++ b/test_space/HTML_SP/style/style_for_bulma.css
@@ -58,7 +58,7 @@ body{
 
 .Title{
  font-size : 10px ; 
- background-color : none ;
+ background-color : rgba(0,0,0,0) ;
  margin : 0px ; 
  width :100% ;
  /*border-bottom :  none ;*/
